--- a/FrannHammer.Seeding.Tests/FrannHammer.Seeding.Tests.csproj
+++ b/FrannHammer.Seeding.Tests/FrannHammer.Seeding.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B8C83EA1-A912-46FF-BA7E-39085A5FB533}</ProjectGuid>
+    <ProjectGuid>{FB28F7F5-3B60-4801-A340-20F7994A80E4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FrannHammer.DataAccess.MongoDb.Tests</RootNamespace>
-    <AssemblyName>FrannHammer.DataAccess.MongoDb.Tests</AssemblyName>
+    <RootNamespace>FrannHammer.Seeding.Tests</RootNamespace>
+    <AssemblyName>FrannHammer.Seeding.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,18 +34,6 @@
       <HintPath>..\packages\Castle.Core.4.0.0\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MongoDB.Bson, Version=2.4.3.23, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Bson.2.4.3\lib\net45\MongoDB.Bson.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MongoDB.Driver, Version=2.4.3.23, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Driver.2.4.3\lib\net45\MongoDB.Driver.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MongoDB.Driver.Core, Version=2.4.3.23, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Driver.Core.2.4.3\lib\net45\MongoDB.Driver.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Moq, Version=4.7.8.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.7.8\lib\net45\Moq.dll</HintPath>
       <Private>True</Private>
@@ -56,10 +44,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Runtime.InteropServices.RuntimeInformation.4.0.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -68,32 +52,52 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseRepositoryTests.cs" />
-    <Compile Include="CharacterAttributeRepositoryTests.cs" />
-    <Compile Include="CharacterRepositoryTests.cs" />
-    <Compile Include="MovementRepositoryTests.cs" />
-    <Compile Include="MoveRepositoryTests.cs" />
+    <Compile Include="DefaultSeederTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\FrannHammer.Api.Services.Contracts\FrannHammer.Api.Services.Contracts.csproj">
+      <Project>{62281D52-5B55-4976-B148-677B0BE6A18B}</Project>
+      <Name>FrannHammer.Api.Services.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FrannHammer.Api.Services\FrannHammer.Api.Services.csproj">
+      <Project>{70F9ADDE-E6A1-43AD-A458-061E86F8832C}</Project>
+      <Name>FrannHammer.Api.Services</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FrannHammer.DataAccess.Contracts\FrannHammer.DataAccess.Contracts.csproj">
       <Project>{EB884173-904C-43C4-8DF1-FE2B275DD248}</Project>
       <Name>FrannHammer.DataAccess.Contracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FrannHammer.DataAccess.MongoDb\FrannHammer.DataAccess.MongoDb.csproj">
-      <Project>{3E7D28F0-731C-4AA7-8C5A-4C9AE810651A}</Project>
-      <Name>FrannHammer.DataAccess.MongoDb</Name>
     </ProjectReference>
     <ProjectReference Include="..\FrannHammer.Domain.Contracts\FrannHammer.Domain.Contracts.csproj">
       <Project>{15A2565C-4611-4034-814A-931DA70ED8B1}</Project>
       <Name>FrannHammer.Domain.Contracts</Name>
     </ProjectReference>
-    <ProjectReference Include="..\FrannHammer.Domain\FrannHammer.Domain.csproj">
-      <Project>{4DB6C856-581A-4B69-BB6A-4AEBF3929C5E}</Project>
-      <Name>FrannHammer.Domain</Name>
+    <ProjectReference Include="..\FrannHammer.Seeding\FrannHammer.Seeding.csproj">
+      <Project>{0DAF993A-5379-4436-B1BF-A1D87ECBF40F}</Project>
+      <Name>FrannHammer.Seeding</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FrannHammer.WebScraper\FrannHammer.WebScraper.csproj">
+      <Project>{9D3C1343-F4B4-4538-B0E0-590D3B2F5DE3}</Project>
+      <Name>FrannHammer.WebScraper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FrannHammer.WebScraping.Contracts\FrannHammer.WebScraping.Contracts.csproj">
+      <Project>{C6F2A84F-6B78-494F-9293-0BB666A64AB9}</Project>
+      <Name>FrannHammer.WebScraping.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FrannHammer.WebScraping.Domain.Contracts\FrannHammer.WebScraping.Domain.Contracts.csproj">
+      <Project>{40C0A772-8A77-484F-919C-DB55CAEAEAA1}</Project>
+      <Name>FrannHammer.WebScraping.Domain.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FrannHammer.WebScraping.Domain\FrannHammer.WebScraping.Domain.csproj">
+      <Project>{D7A6E280-119B-4D41-B512-8D016A3BED5C}</Project>
+      <Name>FrannHammer.WebScraping.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FrannHammer.WebScraping\FrannHammer.WebScraping.csproj">
+      <Project>{B7686798-61B2-4208-86EF-0076BF1301BE}</Project>
+      <Name>FrannHammer.WebScraping</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
