- Modified attribute scraping so it is now character specific and will only scrape attribute data for the specified character - Switched from storing raw, individual attributes (each cell of an attribute) to storing a row of attribute data (which contains the individual cells).  This should make it much easier for consumers to read this data when they retrieve it. - Removed the AttributeFlag property on CharacterAttribute - Added Owner property to CharacterAttribute - Added CharacterAttributeRepository tests - ICharacterAttributeRow now inherits IModel since it will be used in the data store instead of just in memory. - Added a new property to WebCharacter.  AttributeRows which contains the user-friendly rows of a specific character's attributes.

--- a/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
+++ b/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
@@ -86,7 +86,7 @@
     <Compile Include="Moves\GroundMoveScraper.cs" />
     <Compile Include="PageDownloading\DefaultPageDownloader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScrapingXPathConstants.cs" />
+    <Compile Include="ScrapingConstants.cs" />
     <Compile Include="WebClients\DefaultWebClientProvider.cs" />
     <Compile Include="Moves\SpecialMoveScraper.cs" />
   </ItemGroup>
