- Made necessary changes/fixes to repository pattern and models to support MongoDb implementation while remaining platform agnostic in the DAL (hopefully). - Created MongoModel which implements IModel.  All model objects in Domain inherit from MongoModel.  This is where MongoDb proprietary Id stuff happens. - MongoDbRepository handles mapping the Id manually.  This is so I can continue using interfaces at the IRepository level without introducing a dependency to MongoDb. - Ids are generated inside the MongoDbRepository add methods and assigned to the model's Id property prior to being inserted.

--- a/FrannHammer.DataAccess.MongoDb/FrannHammer.DataAccess.MongoDb.csproj
+++ b/FrannHammer.DataAccess.MongoDb/FrannHammer.DataAccess.MongoDb.csproj
@@ -68,6 +68,10 @@
       <Project>{15A2565C-4611-4034-814A-931DA70ED8B1}</Project>
       <Name>FrannHammer.Domain.Contracts</Name>
     </ProjectReference>
+    <ProjectReference Include="..\FrannHammer.Domain\FrannHammer.Domain.csproj">
+      <Project>{4DB6C856-581A-4B69-BB6A-4AEBF3929C5E}</Project>
+      <Name>FrannHammer.Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FrannHammer.Utility\FrannHammer.Utility.csproj">
       <Project>{4DB55C69-EAE5-4970-B8B2-A7A84900041A}</Project>
       <Name>FrannHammer.Utility</Name>
