- Introduced AutoFixture to help automate test data creation - DefaultCharacterAttributeRow now takes an IEnumerable instead of an IList.  This is to maintain parity with its Values property (which is an IEnumerable).

--- a/FrannHammer.Api.Services.Tests/FrannHammer.Api.Services.Tests.csproj
+++ b/FrannHammer.Api.Services.Tests/FrannHammer.Api.Services.Tests.csproj
@@ -46,6 +46,14 @@
       <HintPath>..\packages\NUnit.3.6.1\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Ploeh.AutoFixture, Version=3.50.2.0, Culture=neutral, PublicKeyToken=b24654c590009d4f, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoFixture.3.50.2\lib\net40\Ploeh.AutoFixture.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ploeh.AutoFixture.AutoMoq, Version=3.50.2.0, Culture=neutral, PublicKeyToken=b24654c590009d4f, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoFixture.AutoMoq.3.50.2\lib\net40\Ploeh.AutoFixture.AutoMoq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -56,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseServiceTests.cs" />
     <Compile Include="CharacterAttributeServiceTests.cs" />
     <Compile Include="CharacterServiceTests.cs" />
     <Compile Include="MovementServiceTests.cs" />
