--- a/FrannHammer.Api.Services.Tests/packages.config
+++ b/FrannHammer.Api.Services.Tests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="3.50.2" targetFramework="net45" />
+  <package id="AutoFixture.AutoMoq" version="3.50.2" targetFramework="net45" />
   <package id="Castle.Core" version="4.0.0" targetFramework="net45" />
   <package id="MongoDB.Bson" version="2.4.3" targetFramework="net45" />
   <package id="Moq" version="4.7.8" targetFramework="net45" />
