- Refactored and fixed a lot of tests revolving around scraping and data access via mongodb - Created classes for all characters in scraping domain - WebCharacter now has a build configuration dependent SourceUrl property.  This is so that a local instance of kh site is used for dev testing.  Tests will be run in release mode (which targets the actual site)

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,9 @@ ConnectionStringsTest.config
 **/buildArtifacts/**/*
 **/tools/**/*
 !/tools/packages.config
+/FakeKhSite/hts-cache
+/FakeKhSite/i.imgur.com
+/FakeKhSite/kuroganehammer.com/Melee
+/FakeKhSite/kuroganehammer.com/Pokken
+/FakeKhSite/kuroganehammer.com/RivalsofAether
+/FakeKhSite
