--- a/FrannHammer.WebScraping.Domain/FrannHammer.WebScraping.Domain.csproj
+++ b/FrannHammer.WebScraping.Domain/FrannHammer.WebScraping.Domain.csproj
@@ -40,12 +40,69 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bayonetta.cs" />
+    <Compile Include="Bowser.cs" />
+    <Compile Include="BowserJr.cs" />
+    <Compile Include="CaptainFalcon.cs" />
     <Compile Include="Characters.cs" />
+    <Compile Include="Charizard.cs" />
+    <Compile Include="Cloud.cs" />
+    <Compile Include="Corrin.cs" />
+    <Compile Include="DarkPit.cs" />
     <Compile Include="DefaultAttributeValue.cs" />
     <Compile Include="DefaultAttributeValueRow.cs" />
     <Compile Include="DefaultAttributeValueRowCollection.cs" />
+    <Compile Include="DiddyKong.cs" />
+    <Compile Include="DonkeyKong.cs" />
+    <Compile Include="DrMario.cs" />
+    <Compile Include="DuckHunt.cs" />
+    <Compile Include="Falco.cs" />
+    <Compile Include="Fox.cs" />
+    <Compile Include="Ganondorf.cs" />
     <Compile Include="Greninja.cs" />
+    <Compile Include="Ike.cs" />
+    <Compile Include="Jigglypuff.cs" />
+    <Compile Include="KingDedede.cs" />
+    <Compile Include="Kirby.cs" />
+    <Compile Include="Link.cs" />
+    <Compile Include="LittleMac.cs" />
+    <Compile Include="Lucario.cs" />
+    <Compile Include="Lucas.cs" />
+    <Compile Include="Lucina.cs" />
+    <Compile Include="Luigi.cs" />
+    <Compile Include="Mario.cs" />
+    <Compile Include="Marth.cs" />
+    <Compile Include="MegaMan.cs" />
+    <Compile Include="MetaKnight.cs" />
+    <Compile Include="Mewtwo.cs" />
+    <Compile Include="MiiBrawler.cs" />
+    <Compile Include="MiiGunner.cs" />
+    <Compile Include="MiiSwordfighter.cs" />
+    <Compile Include="MrGameAndWatch.cs" />
+    <Compile Include="Ness.cs" />
+    <Compile Include="Olimar.cs" />
+    <Compile Include="PacMan.cs" />
+    <Compile Include="Palutena.cs" />
+    <Compile Include="Peach.cs" />
+    <Compile Include="Pikachu.cs" />
+    <Compile Include="Pit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rob.cs" />
+    <Compile Include="Robin.cs" />
+    <Compile Include="RosalinaAndLuma.cs" />
+    <Compile Include="Roy.cs" />
+    <Compile Include="Ryu.cs" />
+    <Compile Include="Samus.cs" />
+    <Compile Include="Sheik.cs" />
+    <Compile Include="Shulk.cs" />
+    <Compile Include="Sonic.cs" />
+    <Compile Include="ToonLink.cs" />
+    <Compile Include="Villager.cs" />
+    <Compile Include="Wario.cs" />
+    <Compile Include="WiiFitTrainer.cs" />
+    <Compile Include="Yoshi.cs" />
+    <Compile Include="Zelda.cs" />
+    <Compile Include="ZeroSuitSamus.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FrannHammer.Domain.Contracts\FrannHammer.Domain.Contracts.csproj">
