- IMove.MoveType is now a string - Added extension method to get DescriptionAttribute from an enum - Now setting FullUrl in character scraping

--- a/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
+++ b/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Character\DefaultCharacterDataScrapingServices.cs" />
     <Compile Include="Character\DefaultCharacterMoveScraper.cs" />
     <Compile Include="DefaultWebServices.cs" />
+    <Compile Include="EnumExtensions.cs" />
     <Compile Include="Moves\BaseMoveScraper.cs" />
     <Compile Include="Moves\DefaultMoveScrapingServices.cs" />
     <Compile Include="Moves\AerialMoveScraper.cs" />
