- Refactoring Api services tests to be more DRY.  Taking advantage of generic test classes for test fixtures.

--- a/FrannHammer.Api.Services.Tests/FrannHammer.Api.Services.Tests.csproj
+++ b/FrannHammer.Api.Services.Tests/FrannHammer.Api.Services.Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="BaseServiceTests.cs" />
     <Compile Include="CharacterAttributeServiceTests.cs" />
     <Compile Include="CharacterServiceTests.cs" />
+    <Compile Include="GeneralServiceTests.cs" />
     <Compile Include="MovementServiceTests.cs" />
     <Compile Include="MoveServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
