- Created abstract Get and GetAll methods on BaseApiController.  Every controller will need these so it makes sense to require them. - Took advantage of newly required Get/GetAll methods and genericized controller tests in WebApi.Tests so only one general fixture is needed to cover critical tests.

--- a/FrannHammer.WebApi.Tests/FrannHammer.WebApi.Tests.csproj
+++ b/FrannHammer.WebApi.Tests/FrannHammer.WebApi.Tests.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Controllers\CharacterAttributeControllerTests.cs" />
     <Compile Include="Controllers\CharacterControllerTests.cs" />
     <Compile Include="Controllers\ControllerRoutingTests.cs" />
+    <Compile Include="Controllers\GeneralControllerTests.cs" />
     <Compile Include="Controllers\MoveControllerTests.cs" />
     <Compile Include="Controllers\MovementControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
