- Created lib that contains logic for basic container registration so it can be reused as necessary (DefaultContainer.Configuration) - Updated all webapi project nuget packages - Completed initial configuration of Startup for web api! - Created initial integration tests that use an in-memory web api server and routes to bring back data! (anakin - it's working!) - Added MongoDbBsonMapper to encapsulate mongodb bson class mapping logic. - Added tests to verify controllers will not accept null api service classes - Added AttributeScrapers class in WebScraping that should act as a hub to get back all the scrapers for consumption.  Removes the need for consumer to figure them all out on their own.

--- a/FrannHammer.Seeder/FrannHammer.Seeder.csproj
+++ b/FrannHammer.Seeder/FrannHammer.Seeder.csproj
@@ -62,13 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ContainerModules\ApiServicesModule.cs" />
-    <Compile Include="Container.cs" />
-    <Compile Include="ContainerModules\DatabaseModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ContainerModules\RepositoryModule.cs" />
-    <Compile Include="ContainerModules\ScrapingModule.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -91,6 +86,10 @@
     <ProjectReference Include="..\FrannHammer.DataAccess.MongoDb\FrannHammer.DataAccess.MongoDb.csproj">
       <Project>{3E7D28F0-731C-4AA7-8C5A-4C9AE810651A}</Project>
       <Name>FrannHammer.DataAccess.MongoDb</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FrannHammer.DefaultContainer.Configuration\FrannHammer.DefaultContainer.Configuration.csproj">
+      <Project>{D0A0B3FE-CFB3-4759-AD3C-D3FC20FAE191}</Project>
+      <Name>FrannHammer.DefaultContainer.Configuration</Name>
     </ProjectReference>
     <ProjectReference Include="..\FrannHammer.Domain.Contracts\FrannHammer.Domain.Contracts.csproj">
       <Project>{15A2565C-4611-4034-814A-931DA70ED8B1}</Project>
