--- a/FrannHammer.WebApi.MongoDb.Integration.Tests/packages.config
+++ b/FrannHammer.WebApi.MongoDb.Integration.Tests/packages.config
@@ -1,11 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.5.0" targetFramework="net45" />
+  <package id="Autofac.Owin" version="4.0.0" targetFramework="net45" />
+  <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net45" />
+  <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Hosting" version="3.1.0" targetFramework="net45" />
   <package id="MongoDB.Bson" version="2.4.3" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.4.3" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.4.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
   <package id="NUnit" version="3.6.1" targetFramework="net45" />
-  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
 </packages>
