--- a/FrannHammer.WebApi.Tests/packages.config
+++ b/FrannHammer.WebApi.Tests/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.4.3" targetFramework="net45" />
   <package id="Moq" version="4.7.8" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
   <package id="NUnit" version="3.6.1" targetFramework="net45" />
