- Introduced specflow for end to end tests in FrannHammer.WebApi.Specs - Renamed FrannHammer.WebApi.MongoDb.Integration.Tests project to FrannHammer.WebApi.Specs

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ ConnectionStringsTest.config
 /FakeKhSite/kuroganehammer.com/Pokken
 /FakeKhSite/kuroganehammer.com/RivalsofAether
 /FakeKhSite
+/TestResults
