--- a/FrannHammer.WebApi.Specs/app.config
+++ b/FrannHammer.WebApi.Specs/app.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
+  </configSections>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -46,6 +50,21 @@
         <assemblyIdentity name="System.Web.Http.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="TechTalk.SpecFlow" publicKeyToken="0778194805d6db41" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <specFlow>
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+    <!-- use unit test provider SpecRun+NUnit or SpecRun+MsTest for being able to execute the tests with SpecRun and another provider -->
+    <unitTestProvider name="NUnit" />
+  </specFlow>
 </configuration>
