--- a/FrannHammer.WebApi.Specs/packages.config
+++ b/FrannHammer.WebApi.Specs/packages.config
@@ -16,6 +16,17 @@
   <package id="MongoDB.Driver.Core" version="2.4.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
   <package id="NUnit" version="3.6.1" targetFramework="net45" />
+  <package id="NUnit.Console" version="3.6.1" targetFramework="net45" />
+  <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net45" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net45" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net45" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="SpecFlow" version="2.1.0" targetFramework="net45" />
+  <package id="SpecFlow.NUnit" version="2.1.0" targetFramework="net45" />
+  <package id="SpecRun.Runner" version="1.5.2" targetFramework="net45" />
+  <package id="SpecRun.SpecFlow" version="1.5.2" targetFramework="net45" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
 </packages>
