--- a/FrannHammer.Seeder/App.config
+++ b/FrannHammer.Seeder/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings file="..\..\..\appsettings.config">
+    <add key="databaseName" value="integrationtestfranndotexe"/>
+  </appSettings>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="ds115411.mlab.com:15411/"/>
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
