--- a/FrannHammer.Utility/FrannHammer.Utility.csproj
+++ b/FrannHammer.Utility/FrannHammer.Utility.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigurationKeys.cs" />
     <Compile Include="Guard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
