--- a/FrannHammer.WebApi.Specs/app.config
+++ b/FrannHammer.WebApi.Specs/app.config
@@ -3,6 +3,13 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
+  <appSettings file="..\..\..\appsettings.config">
+    <add key="databaseName" value="integrationtestfranndotexe"/>
+  </appSettings>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="ds115411.mlab.com:15411/"/>
+  </connectionStrings>
+
 
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
